--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.pyc
+*.sqlite3
 
 # C extensions
 *.so
@@ -53,7 +54,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-
+*/static/admin/
 # Flask stuff:
 instance/
 .webassets-cache
